@@ -1,4 +1,4 @@
-# TODO: use Hilbert-transformed amplitude envelopes in segment(); check spectral centroid calculation, dB vs raw power scale in spectrograms; add shimmerLen (for unstead, trembling voice); maybe check if shimmer can be generated differently. Currently linear interpolation, so the ampl contour might be a bit weird; analyze() should export the spectrum of each frame (a long list) instead of only summaries - then the user can extract whatever measures of spectral shape they like
+# TODO: check schwa() - % change in formants should be calculated from semitones not Hz; noise duration should correspond to synLen if temp>0; use Hilbert-transformed amplitude envelopes in segment(); check spectral centroid calculation, dB vs raw power scale in spectrograms; add shimmerLen (for unstead, trembling voice); maybe check if shimmer can be generated differently. Currently linear interpolation, so the ampl contour might be a bit weird; analyze() should export the spectrum of each frame (a long list) instead of only summaries - then the user can extract whatever measures of spectral shape they like
 
 #' @import stats graphics utils grDevices
 #' @encoding UTF-8
